--- a/public/privacy.html
+++ b/public/privacy.html
@@ -98,9 +98,6 @@
 </head>
 
 <body>
-
-    <div class="disclaimer message">Thank you for your interest in Coffee Roulette.
-    </div>
     <div class="image" id="logo">
     </div>
     <div class="copy">
@@ -110,9 +107,9 @@
 
 <p>At coffeeroulette, accessible from https://coffeeroulette.madewithlove.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by coffeeroulette and how we use it.</p>
 
-<p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
+<p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us. You can do so via the form <a href="https://coffeeroulette.madewithlove.com/support">here</a> or via <a href="mailto:marijn@madewithlove.com">marijn@madewithlove.com</a></p>
 
-<p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in coffeeroulette. This policy is not applicable to any information collected offline or via channels other than this website. Our Privacy Policy was created with the help of the <a href="https://www.privacypolicygenerator.info/#wizard">Free Privacy Policy Generator</a>.</p>
+<p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in coffeeroulette. This policy is not applicable to any information collected offline or via channels other than this website. </p>
 
 <h2>Consent</h2>
 
